# engineering_for_surgery

./: .gitignore  README.md  pyproject.toml  requirements.txt
Classes/: ImageDisplay3D_20250915.py  PCA.py  UserInterfaces_09032025.py  cameraman_anon.tif  data_vis_and_analysis_08252025.py  dim_redux_08272025.py  image_display3d_09152025.py  image_filtering_09102025.py  image_representation_09082025.py  myBoxplot.py  user_interfaces_09032025.py  volumeViewer.py  vtkWin.py
project_1/: PCA.py  Project1_1  Project1_1.py  Project1_2.py  Project1_3.py
