[project]
name = "engineering-for-surgery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "adjusttext>=1.3.0",
    "aiohttp==3.9.1",
    "aiosignal==1.3.1",
    "appdirs==1.4.4",
    "apptools==5.2.1",
    "arff==0.9",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "configobj==5.0.8",
    "contourpy==1.2.0",
    "cycler==0.12.1",
    "deepdiff==6.3.1",
    "deprecated==1.2.14",
    "docutils==0.20.1",
    "envisage==7.0.3",
    "et-xmlfile==1.1.0",
    "exceptiongroup==1.2.0",
    "ffmpeg==1.4",
    "ffmpeg-python==0.2.0",
    "filelock==3.13.1",
    "fonttools==4.47.0",
    "frozenlist==1.4.1",
    "fsspec==2023.12.2",
    "future==0.18.3",
    "h5py==3.9.0",
    "idna==3.6",
    "imageio==2.33.1",
    "importlib-metadata==7.0.1",
    "importlib-resources==6.1.1",
    "iniconfig==2.0.0",
    "jinja2==3.1.2",
    "joblib==1.3.2",
    "k-wave-python==0.3.0",
    "kiwisolver==1.4.5",
    "lazy-loader==0.3",
    "markupsafe==2.1.3",
    "matplotlib==3.7.2",
    "mpmath==1.3.0",
    "multidict==6.0.4",
    "networkx==3.2.1",
    "nibabel==5.2.0",
    "nptyping==2.5.0",
    "numpy==1.24.4",
    "numpy-stl==3.1.1",
    "opencv-python==4.8.0.76",
    "openpyxl==3.1.2",
    "openreview-py==1.34.0",
    "ordered-set==4.1.0",
    "packaging==23.2",
    "pandas==2.1.4",
    "patsy==0.5.5",
    "pillow==10.2.0",
    "pluggy==1.3.0",
    "pycryptodome==3.19.1",
    "pyface==8.0.0",
    "pygments==2.17.2",
    "pyjwt==2.8.0",
    "pylatexenc==2.10",
    "pynrrd==1.0.0",
    "pyparsing==3.0.9",
    "pyqt5==5.15.7",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.13.0",
    "pytest==7.4.4",
    "python-dateutil==2.8.2",
    "python-utils==3.8.1",
    "pytz==2023.3.post1",
    "pywavelets==1.5.0",
    "requests==2.31.0",
    "scikit-fem==9.0.0",
    "scikit-image==0.21.0",
    "scikit-learn==1.3.2",
    "scikit-sound==0.2.13",
    "scipy==1.10.1",
    "six==1.16.0",
    "statsmodels==0.14.1",
    "sympy==1.12",
    "threadpoolctl==3.2.0",
    "tifffile==2023.12.9",
    "tld==0.13",
    "tomli==2.0.1",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchvision==0.16.2",
    "tqdm==4.66.1",
    "traits==6.4.3",
    "traitsui==8.0.0",
    "typing-extensions==4.9.0",
    "tzdata==2023.4",
    "uff-reader==0.0.2",
    "urllib3==2.1.0",
    "vtk==9.3.0",
    "wrapt==1.16.0",
    "wslink==1.12.4",
    "yarl==1.9.4",
    "zipp==3.17.0",
]
